use all datasets

--- a/notebooks/run_benchmark.ipynb
+++ b/notebooks/run_benchmark.ipynb
@@ -48,7 +48,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_table_IV_B()"
+    "run_table_IV_B()\n",
+    "\n",
+    "# you can choose to seperate this running into the following two:\n",
+    "# run_table_IV_B_nomask()\n",
+    "# run_table_IV_B_mask()"
    ]
   }
  ],
