fix a bug in run_benchmark

--- a/notebooks/run_benchmark.ipynb
+++ b/notebooks/run_benchmark.ipynb
@@ -30,7 +30,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_table_IV_A()"
+    "run_table_IV_A()\n",
+    "\n",
+    "\n",
+    "# you can choose to seperate this running into the following two:\n",
+    "# run_table_IV_A_nomask()\n",
+    "# run_table_IV_A_mask()"
    ]
   },
   {
@@ -48,11 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_table_IV_B()\n",
-    "\n",
-    "# you can choose to seperate this running into the following two:\n",
-    "# run_table_IV_B_nomask()\n",
-    "# run_table_IV_B_mask()"
+    "run_table_IV_B()"
    ]
   }
  ],
