fix aer variation setting issue

--- a/notebooks/run_benchmark.ipynb
+++ b/notebooks/run_benchmark.ipynb
@@ -1,9 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7e77acdf-0cf3-4341-b0d6-ccdabf64b50c",
+   "metadata": {},
+   "source": [
+    "### Important setup\n",
+    "To run benchmark, you have to do the following steps:\n",
+    "\n",
+    "step1: download `data.zip` file over the link (xxx)\n",
+    "\n",
+    "step2: unzip it into `aer/data` folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0644eb0-9336-4ad3-a726-a4051ba90844",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cabb6c5-dc3f-4006-96b6-ac9f4f21e4ac",
+   "id": "6270f879-bea2-468a-b174-a94c3ed502e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +52,6 @@
    "outputs": [],
    "source": [
     "run_table_IV_A()\n",
-    "\n",
     "\n",
     "# you can choose to seperate this running into the following two:\n",
     "# run_table_IV_A_nomask()\n",
