elaborate on benchmark scripts and yahoo dataset

--- a/notebooks/run_benchmark.ipynb
+++ b/notebooks/run_benchmark.ipynb
@@ -6,11 +6,7 @@
    "metadata": {},
    "source": [
     "### Important setup\n",
-    "To run benchmark, you have to do the following steps:\n",
-    "\n",
-    "step1: download `data.zip` file over the link (xxx)\n",
-    "\n",
-    "step2: unzip it into `aer/data` folder"
+    "Please refer to `README.md` and download data folder before you run benchmarking codes."
    ]
   },
   {
