--- a/notebooks/analyze_results.ipynb
+++ b/notebooks/analyze_results.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-30 15:26:50.086266: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudart.so.10.1\n"
+      "2022-10-30 18:36:43.703000: I tensorflow/stream_executor/platform/default/dso_loader.cc:48] Successfully opened dynamic library libcudart.so.10.1\n"
      ]
     }
    ],
@@ -179,20 +179,20 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AER</th>\n",
-       "      <td>0.6111</td>\n",
-       "      <td>0.7969</td>\n",
-       "      <td>0.7896</td>\n",
+       "      <td>0.5405</td>\n",
+       "      <td>0.7717</td>\n",
+       "      <td>0.7723</td>\n",
        "      <td>0.9586</td>\n",
-       "      <td>0.8815</td>\n",
-       "      <td>0.7281</td>\n",
-       "      <td>0.5000</td>\n",
-       "      <td>0.6562</td>\n",
+       "      <td>0.8964</td>\n",
+       "      <td>0.7222</td>\n",
+       "      <td>0.6154</td>\n",
+       "      <td>0.6349</td>\n",
        "      <td>0.6207</td>\n",
-       "      <td>0.5625</td>\n",
-       "      <td>0.5714</td>\n",
-       "      <td>0.4852</td>\n",
-       "      <td>0.6802</td>\n",
-       "      <td>0.1511</td>\n",
+       "      <td>0.6061</td>\n",
+       "      <td>0.5846</td>\n",
+       "      <td>0.4698</td>\n",
+       "      <td>0.6828</td>\n",
+       "      <td>0.1449</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -206,7 +206,7 @@
        "LSTM-AE   0.4571  0.7259  0.6391  0.9610  0.5938  0.3678  0.4444  0.6786   \n",
        "LSTM-VAE  0.4324  0.6056  0.6171  0.9124  0.5977  0.3263  0.4444  0.7018   \n",
        "TadGAN    0.5843  0.6174  0.5325  0.8421  0.3907  0.2969  0.5714  0.6774   \n",
-       "AER       0.6111  0.7969  0.7896  0.9586  0.8815  0.7281  0.5000  0.6562   \n",
+       "AER       0.5405  0.7717  0.7723  0.9586  0.8964  0.7222  0.6154  0.6349   \n",
        "\n",
        "dataset      AWS  Traffic  Tweets     UCR  AVG (F1)  SD (F1)  \n",
        "pipeline                                                      \n",
@@ -215,7 +215,7 @@
        "LSTM-AE   0.6429   0.5926  0.5357  0.3292    0.5807   0.1651  \n",
        "LSTM-VAE  0.7586   0.5926  0.5357  0.3540    0.5732   0.1625  \n",
        "TadGAN    0.7200   0.5806  0.5882  0.1625    0.5470   0.1777  \n",
-       "AER       0.6207   0.5625  0.5714  0.4852    0.6802   0.1511  "
+       "AER       0.6207   0.6061  0.5846  0.4698    0.6828   0.1449  "
       ]
      },
      "execution_count": 2,
@@ -369,6 +369,23 @@
        "      <td>0.1398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>LSTM-DT (M, Bi)</th>\n",
+       "      <td>0.5049</td>\n",
+       "      <td>0.6620</td>\n",
+       "      <td>0.7550</td>\n",
+       "      <td>0.9494</td>\n",
+       "      <td>0.8947</td>\n",
+       "      <td>0.7917</td>\n",
+       "      <td>0.5455</td>\n",
+       "      <td>0.4884</td>\n",
+       "      <td>0.7857</td>\n",
+       "      <td>0.6842</td>\n",
+       "      <td>0.5867</td>\n",
+       "      <td>0.4321</td>\n",
+       "      <td>0.6734</td>\n",
+       "      <td>0.1590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>LSTM-AE</th>\n",
        "      <td>0.4571</td>\n",
        "      <td>0.7259</td>\n",
@@ -475,31 +492,33 @@
        "</div>"
       ],
       "text/plain": [
-       "dataset          MSL    SMAP      A1      A2      A3      A4     Art    AdEx  \\\n",
-       "pipeline                                                                       \n",
-       "ARIMA         0.4421  0.3333  0.7332  0.8074  0.8176  0.6998  0.3529  0.5176   \n",
-       "ARIMA (M)     0.4565  0.3590  0.7519  0.8093  0.8069  0.6899  0.5000  0.5176   \n",
-       "LSTM-DT       0.5155  0.7075  0.7206  0.9801  0.7442  0.6379  0.4000  0.5128   \n",
-       "LSTM-DT (M)   0.5208  0.7536  0.7287  0.9875  0.7335  0.6378  0.6000  0.5128   \n",
-       "LSTM-AE       0.4571  0.7259  0.6391  0.9610  0.5938  0.3678  0.4444  0.6786   \n",
-       "LSTM-AE (M)   0.4571  0.7717  0.6448  0.9633  0.5938  0.3670  0.4444  0.6786   \n",
-       "LSTM-VAE      0.4324  0.6056  0.6171  0.9124  0.5977  0.3263  0.4444  0.7018   \n",
-       "LSTM-VAE (M)  0.4384  0.7049  0.6292  0.9406  0.5946  0.3279  0.4444  0.7143   \n",
-       "TadGAN        0.5843  0.6174  0.5325  0.8421  0.3907  0.2969  0.5714  0.6774   \n",
-       "TadGAN (M)    0.5843  0.6301  0.5342  0.8462  0.3950  0.2913  0.6154  0.6774   \n",
+       "dataset             MSL    SMAP      A1      A2      A3      A4     Art  \\\n",
+       "pipeline                                                                  \n",
+       "ARIMA            0.4421  0.3333  0.7332  0.8074  0.8176  0.6998  0.3529   \n",
+       "ARIMA (M)        0.4565  0.3590  0.7519  0.8093  0.8069  0.6899  0.5000   \n",
+       "LSTM-DT          0.5155  0.7075  0.7206  0.9801  0.7442  0.6379  0.4000   \n",
+       "LSTM-DT (M)      0.5208  0.7536  0.7287  0.9875  0.7335  0.6378  0.6000   \n",
+       "LSTM-DT (M, Bi)  0.5049  0.6620  0.7550  0.9494  0.8947  0.7917  0.5455   \n",
+       "LSTM-AE          0.4571  0.7259  0.6391  0.9610  0.5938  0.3678  0.4444   \n",
+       "LSTM-AE (M)      0.4571  0.7717  0.6448  0.9633  0.5938  0.3670  0.4444   \n",
+       "LSTM-VAE         0.4324  0.6056  0.6171  0.9124  0.5977  0.3263  0.4444   \n",
+       "LSTM-VAE (M)     0.4384  0.7049  0.6292  0.9406  0.5946  0.3279  0.4444   \n",
+       "TadGAN           0.5843  0.6174  0.5325  0.8421  0.3907  0.2969  0.5714   \n",
+       "TadGAN (M)       0.5843  0.6301  0.5342  0.8462  0.3950  0.2913  0.6154   \n",
        "\n",
-       "dataset          AWS  Traffic  Tweets     UCR  AVG (F1)  SD (F1)  \n",
-       "pipeline                                                          \n",
-       "ARIMA         0.7407   0.5000  0.5672  0.1236    0.5530   0.2068  \n",
-       "ARIMA (M)     0.7692   0.5000  0.5758  0.1481    0.5737   0.1933  \n",
-       "LSTM-DT       0.7407   0.6667  0.5797  0.3908    0.6330   0.1589  \n",
-       "LSTM-DT (M)   0.7692   0.6857  0.5882  0.4461    0.6637   0.1398  \n",
-       "LSTM-AE       0.6429   0.5926  0.5357  0.3292    0.5807   0.1651  \n",
-       "LSTM-AE (M)   0.6429   0.6154  0.5357  0.3333    0.5873   0.1693  \n",
-       "LSTM-VAE      0.7586   0.5926  0.5357  0.3540    0.5732   0.1625  \n",
-       "LSTM-VAE (M)  0.7586   0.6154  0.5357  0.3607    0.5887   0.1709  \n",
-       "TadGAN        0.7200   0.5806  0.5882  0.1625    0.5470   0.1777  \n",
-       "TadGAN (M)    0.7200   0.5806  0.5882  0.1642    0.5522   0.1796  "
+       "dataset            AdEx     AWS  Traffic  Tweets     UCR  AVG (F1)  SD (F1)  \n",
+       "pipeline                                                                     \n",
+       "ARIMA            0.5176  0.7407   0.5000  0.5672  0.1236    0.5530   0.2068  \n",
+       "ARIMA (M)        0.5176  0.7692   0.5000  0.5758  0.1481    0.5737   0.1933  \n",
+       "LSTM-DT          0.5128  0.7407   0.6667  0.5797  0.3908    0.6330   0.1589  \n",
+       "LSTM-DT (M)      0.5128  0.7692   0.6857  0.5882  0.4461    0.6637   0.1398  \n",
+       "LSTM-DT (M, Bi)  0.4884  0.7857   0.6842  0.5867  0.4321    0.6734   0.1590  \n",
+       "LSTM-AE          0.6786  0.6429   0.5926  0.5357  0.3292    0.5807   0.1651  \n",
+       "LSTM-AE (M)      0.6786  0.6429   0.6154  0.5357  0.3333    0.5873   0.1693  \n",
+       "LSTM-VAE         0.7018  0.7586   0.5926  0.5357  0.3540    0.5732   0.1625  \n",
+       "LSTM-VAE (M)     0.7143  0.7586   0.6154  0.5357  0.3607    0.5887   0.1709  \n",
+       "TadGAN           0.6774  0.7200   0.5806  0.5882  0.1625    0.5470   0.1777  \n",
+       "TadGAN (M)       0.6774  0.7200   0.5806  0.5882  0.1642    0.5522   0.1796  "
       ]
      },
      "execution_count": 3,
@@ -586,71 +605,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>AER (PRED)</th>\n",
-       "      <td>0.5227</td>\n",
-       "      <td>0.6944</td>\n",
-       "      <td>0.7146</td>\n",
-       "      <td>0.9359</td>\n",
-       "      <td>0.8815</td>\n",
-       "      <td>0.7281</td>\n",
-       "      <td>0.8000</td>\n",
-       "      <td>0.4946</td>\n",
-       "      <td>0.7097</td>\n",
-       "      <td>0.7368</td>\n",
-       "      <td>0.6000</td>\n",
-       "      <td>0.4635</td>\n",
-       "      <td>0.6902</td>\n",
-       "      <td>0.1413</td>\n",
+       "      <td>0.4944</td>\n",
+       "      <td>0.6846</td>\n",
+       "      <td>0.7047</td>\n",
+       "      <td>0.9227</td>\n",
+       "      <td>0.8964</td>\n",
+       "      <td>0.7222</td>\n",
+       "      <td>0.5000</td>\n",
+       "      <td>0.5412</td>\n",
+       "      <td>0.6875</td>\n",
+       "      <td>0.6154</td>\n",
+       "      <td>0.5556</td>\n",
+       "      <td>0.4613</td>\n",
+       "      <td>0.6488</td>\n",
+       "      <td>0.1444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AER (SUM)</th>\n",
-       "      <td>0.5060</td>\n",
-       "      <td>0.7273</td>\n",
-       "      <td>0.7193</td>\n",
-       "      <td>0.9381</td>\n",
-       "      <td>0.7166</td>\n",
-       "      <td>0.5367</td>\n",
+       "      <td>0.4878</td>\n",
+       "      <td>0.6803</td>\n",
+       "      <td>0.7139</td>\n",
+       "      <td>0.9359</td>\n",
+       "      <td>0.7192</td>\n",
+       "      <td>0.5532</td>\n",
        "      <td>0.5000</td>\n",
-       "      <td>0.7241</td>\n",
+       "      <td>0.7018</td>\n",
        "      <td>0.7333</td>\n",
-       "      <td>0.5882</td>\n",
-       "      <td>0.5373</td>\n",
-       "      <td>0.4448</td>\n",
-       "      <td>0.6393</td>\n",
-       "      <td>0.1366</td>\n",
+       "      <td>0.6061</td>\n",
+       "      <td>0.5588</td>\n",
+       "      <td>0.4277</td>\n",
+       "      <td>0.6348</td>\n",
+       "      <td>0.1342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AER (REC)</th>\n",
-       "      <td>0.4800</td>\n",
-       "      <td>0.6992</td>\n",
-       "      <td>0.7086</td>\n",
-       "      <td>0.9752</td>\n",
-       "      <td>0.6207</td>\n",
-       "      <td>0.4200</td>\n",
-       "      <td>0.4444</td>\n",
-       "      <td>0.6786</td>\n",
-       "      <td>0.6429</td>\n",
-       "      <td>0.5714</td>\n",
        "      <td>0.5000</td>\n",
-       "      <td>0.3807</td>\n",
-       "      <td>0.5935</td>\n",
-       "      <td>0.1582</td>\n",
+       "      <td>0.6825</td>\n",
+       "      <td>0.7072</td>\n",
+       "      <td>0.9850</td>\n",
+       "      <td>0.6203</td>\n",
+       "      <td>0.4160</td>\n",
+       "      <td>0.4444</td>\n",
+       "      <td>0.6441</td>\n",
+       "      <td>0.6923</td>\n",
+       "      <td>0.5714</td>\n",
+       "      <td>0.5185</td>\n",
+       "      <td>0.3629</td>\n",
+       "      <td>0.5954</td>\n",
+       "      <td>0.1604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AER (MULT)</th>\n",
-       "      <td>0.6111</td>\n",
-       "      <td>0.7969</td>\n",
-       "      <td>0.7896</td>\n",
+       "      <td>0.5405</td>\n",
+       "      <td>0.7717</td>\n",
+       "      <td>0.7723</td>\n",
        "      <td>0.9586</td>\n",
-       "      <td>0.7472</td>\n",
-       "      <td>0.5784</td>\n",
-       "      <td>0.5000</td>\n",
-       "      <td>0.6562</td>\n",
+       "      <td>0.7525</td>\n",
+       "      <td>0.5719</td>\n",
+       "      <td>0.6154</td>\n",
+       "      <td>0.6349</td>\n",
        "      <td>0.6207</td>\n",
-       "      <td>0.5625</td>\n",
-       "      <td>0.5714</td>\n",
-       "      <td>0.4852</td>\n",
-       "      <td>0.6565</td>\n",
-       "      <td>0.1342</td>\n",
+       "      <td>0.6061</td>\n",
+       "      <td>0.5846</td>\n",
+       "      <td>0.4698</td>\n",
+       "      <td>0.6583</td>\n",
+       "      <td>0.1271</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -659,17 +678,17 @@
       "text/plain": [
        "dataset        MSL    SMAP      A1      A2      A3      A4     Art    AdEx  \\\n",
        "pipeline                                                                     \n",
-       "AER (PRED)  0.5227  0.6944  0.7146  0.9359  0.8815  0.7281  0.8000  0.4946   \n",
-       "AER (SUM)   0.5060  0.7273  0.7193  0.9381  0.7166  0.5367  0.5000  0.7241   \n",
-       "AER (REC)   0.4800  0.6992  0.7086  0.9752  0.6207  0.4200  0.4444  0.6786   \n",
-       "AER (MULT)  0.6111  0.7969  0.7896  0.9586  0.7472  0.5784  0.5000  0.6562   \n",
+       "AER (PRED)  0.4944  0.6846  0.7047  0.9227  0.8964  0.7222  0.5000  0.5412   \n",
+       "AER (SUM)   0.4878  0.6803  0.7139  0.9359  0.7192  0.5532  0.5000  0.7018   \n",
+       "AER (REC)   0.5000  0.6825  0.7072  0.9850  0.6203  0.4160  0.4444  0.6441   \n",
+       "AER (MULT)  0.5405  0.7717  0.7723  0.9586  0.7525  0.5719  0.6154  0.6349   \n",
        "\n",
        "dataset        AWS  Traffic  Tweets     UCR  AVG (F1)  SD (F1)  \n",
        "pipeline                                                        \n",
-       "AER (PRED)  0.7097   0.7368  0.6000  0.4635    0.6902   0.1413  \n",
-       "AER (SUM)   0.7333   0.5882  0.5373  0.4448    0.6393   0.1366  \n",
-       "AER (REC)   0.6429   0.5714  0.5000  0.3807    0.5935   0.1582  \n",
-       "AER (MULT)  0.6207   0.5625  0.5714  0.4852    0.6565   0.1342  "
+       "AER (PRED)  0.6875   0.6154  0.5556  0.4613    0.6488   0.1444  \n",
+       "AER (SUM)   0.7333   0.6061  0.5588  0.4277    0.6348   0.1342  \n",
+       "AER (REC)   0.6923   0.5714  0.5185  0.3629    0.5954   0.1604  \n",
+       "AER (MULT)  0.6207   0.6061  0.5846  0.4698    0.6583   0.1271  "
       ]
      },
      "execution_count": 4,
